ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-rpm: "40"
spec:
  tls:
  - hosts:
    - agroscope.site
    - www.agroscope.site
    - backend.agroscope.site
    - model.agroscope.site
    - gee.agroscope.site
    secretName: backend-kubernetes-tls
  rules:
  - host: "backend.agroscope.site"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: "model.agroscope.site"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: model-service
            port:
              number: 80
  - host: "gee.agroscope.site"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gee-service
            port:
              number: 80
  - host: "agroscope.site"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: "www.agroscope.site"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  ingressClassName: nginx
